# discora

./: .direnv.sample  .env.sample  .gitignore  Makefile  README.md  config.py  discord_agent.py  disord_tools.py  main.py  pyproject.toml  requirements.txt  run_tests.sh  setup.py  setup_env.sh
discord_tools/: fetch_messages.py  list_text_channels.py  list_threads.py
docs/: notion_requirements.md
scripts/: setup_vscode.sh
src/: config.py  main.py  orchestrator.py
src/discora/agents/discord/: __init__.py  agent.py  context.py
src/discora/agents/discord/tools/: __init__.py  channels.py  messages.py  threads.py
src/discora/agents/notion/: __init__.py  agent.py  clinet_test.py  context.py  example.py  page_test.py
src/discora/agents/notion/tools/: page.py
src/discora/agents/orchestrator/: __init__.py  agent.py  context.py
src/discora/agents/orchestrator/tools/: subagent.py
src/discora/core/: config.py  main.py
src/discora/service/discord/: channels.py  messages.py  threads.py
src/discora/service/notion/: page.py
src/discord/: discord_agent.py
src/discord_bot/: discord_agent.py  disord_tools.py
src/notion/: agent.py  client.py  clinet_test.py  example.py  page.py  page_test.py
