[project]
name = "discora"
version = "0.1.0"
description = ""
authors = [
    {name = "SakamotoHiroya",email = "ayorih16@icloud.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4"
dependencies = [
    "notion-client (>=2.3.0,<3.0.0)",
    "discord-py (>=2.5.2,<3.0.0)",
    "openai-agents (>=0.0.7,<0.0.8)",
    "aiohttp (>=3.11.16,<4.0.0)"
]

[tool.poetry]

packages = [
    { include = "discora", from = "src" },
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"